--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <link rel="Icon" href="./—Pngtree—vector portfolio icon_4165635.png">
-    <link rel="stylesheet" href="./stylepro.css">
+    <link rel="stylesheet" href="./src/styles/stylepro.css">
     <!-- box icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -288,6 +288,6 @@
             <span class="animate scroll" style="--i:3;"></span>
         </div>
     </footer>
-    <script src="./scriptpro.js"></script>
+    <script src="./src/script/scriptpro.js"></script>
 </body>
 </html>
