--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-eqiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
-    <link rel="Icon" href="./—Pngtree—vector portfolio icon_4165635.png">
+    <link rel="Icon" href="./src/assests/img/—Pngtree—vector portfolio icon_4165635.png">
     <link rel="stylesheet" href="./src/styles/stylepro.css">
     <!-- box icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -40,7 +40,7 @@
             </p>
             <div class="btn-box">
                 <a target="_blank" href="mailto:rajasekar60530@gmail.com" class="btn">Hire Me</a>
-                <a target="_blank" href="RAJASEKAR--V.pdf" download class="btn">Download CV<i class='bx bxs-download'></i></a> 
+                <a target="_blank" href="./src/assests/Resume/RAJASEKAR--V.pdf" download class="btn">Download CV<i class='bx bxs-download'></i></a> 
                 <span class="animate" style="--i:5;"></span>
             </div>
         </div>
