--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </p>
             <div class="btn-box">
                 <a target="_blank" href="mailto:rajasekar60530@gmail.com" class="btn">Hire Me</a>
-                <a target="_blank" href="./src/assests/Resume/RAJASEKAR--V.pdf" download class="btn">Download CV<i class='bx bxs-download'></i></a> 
+                <a target="_blank" href="./src/assests/Resume/RAJASEKAR--V.pdf" download class="btn">Resume<i class='bx bxs-download'></i></a> 
                 <span class="animate" style="--i:5;"></span>
             </div>
         </div>
